Thu Apr  1 00:18:55 BST 2004  Colin Watson  <cjwatson@debian.org>

	* src/man.c (do_extern): Pass only options understood by
	  apropos/whatis, using the pipeline library (Debian bug #207436).
	  (main): Make optind global. Install SIGINT and SIGCHLD handlers
	  earlier. Update do_extern call.
	* docs/NEWS: Document this.

Wed Mar 31 23:40:15 BST 2004  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): If stdout isn't a terminal, get rid
	  of formatting characters using GROFF_NO_SGR=1 and 'col -b'
	  (thanks, Adam Heath).
	* docs/NEWS: Document this.

Thu Mar 25 19:31:02 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (apropos): Move warning-silencing code to the bottom
	  of the function, so that it doesn't interfere with declarations.

Sun Mar 14 03:52:12 UTC 2004  Giuseppe Sacco <eppesuig@debian.org>

	* Updated italian translation (corrected three fuzzy strings)

Tue Mar  9 10:25:40 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* zsoelim/zsoelim.l: Define debug for the benefit of pipeline.c.
	  (open_file): Use pipeline library.

Tue Mar  9 01:54:20 GMT 2004  Colin Watson  <cjwatson@debian.org>

	* zsoelim/zsoelim.l: Long-overdue style cleanup per docs/HACKING. No
	  functional changes.

Tue Mar  9 00:37:23 GMT 2004  Colin Watson  <cjwatson@debian.org>

	Roll out the new pipeline library in most programs.

	* src/compression.c (decompress): Use pipeline library.
	* src/fake_security.c (do_system_drop_privs): Likewise.
	* src/lexgrog.l (main): Initialize pipeline library.
	* src/man.c (checked_popen, gripe_system, checked_system, run_mandb,
	  format_display_and_save, format_display, display_catman, display):
	  Use pipeline library.
	  (add_roff_line_length): Append to a command structure rather than
	  using strappend.
	  (main): Initialize pipeline library.
	  (make_roff_command): Return a constructed pipeline instead of a
	  malloced string. This plugs various hitherto difficult leaks. Drop